--- a/config/train_config.yaml
+++ b/config/train_config.yaml
@@ -3,12 +3,12 @@ cuda_devices: '0'   # multi-gpu training is available
 
 # dataset
 dataset:
-  data_root: 'ModelNet40_MeshNet/'
+  data_root: 'data/ADNI2_MeshNet/'
   augment_data: true
-  max_faces: 1024
+  max_faces: 1460
 
 # result
-ckpt_root: 'ckpt_root/'
+ckpt_root: 'ckpts/'
 
 # MeshNet
 MeshNet:
@@ -23,6 +23,6 @@ lr: 0.01
 momentum: 0.9
 weight_decay: 0.0005
 batch_size: 64
-max_epoch: 150
+max_epoch: 300
 milestones: [30, 60]
 gamma: 0.1
